fix filter panel overlap

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -3,7 +3,7 @@
     background: none!important;
 }
 
-.ui-mobile [data-role=page], .ui-page {
+.libraryPage {
     padding-top: 35px !important;
 }
 
